# libmanchicken

./: .gitignore  .tags  .tags_sorted_by_file  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  config.h.in  configure  configure.ac  libmanchicken.kdev4  my.makefile
.github/workflows/: codeql-analysis.yml
.kdev4/: libmanchicken.kdev4
Metadata/: libmanchicken.sublime-project  libmanchicken.sublime-workspace
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: mutable_string.h
src/: Makefile.am  Makefile.in  dynamic_csv.c  dynamic_csv.h  dynamic_list.c  dynamic_list.h  findbin.c  findbin.h  manchicken.h  mutable_string.c  mutable_string.h  single_linked_list.c  single_linked_list.h  swansong.c  swansong.h
t/: Makefile.am  Makefile.in  foo.c  t_dynamic_list.c  t_findbin.c  t_mutable_string.c  t_single_linked_list.c  t_swansong.c
